[gd_scene load_steps=4 format=3 uid="uid://6cy4wjxci3h5"]

[ext_resource type="Script" uid="uid://csgnn4imyguli" path="res://GameFiles/Gameplay Scripts/Indicators/hotelInd.gd" id="1_1upyf"]
[ext_resource type="PackedScene" uid="uid://b742ayww4g6ji" path="res://GameFiles/Sprites/Indicators/Danger.tscn" id="2_ngx3p"]
[ext_resource type="AudioStream" uid="uid://dr48wcdkjf3gb" path="res://GameFiles/SoundEffects/MissilesBeep.mp3" id="3_86jkg"]

[node name="HotelIndicators" type="Node2D"]
visible = false
position = Vector2(0, 540)
script = ExtResource("1_1upyf")

[node name="Indicator0" parent="." instance=ExtResource("2_ngx3p")]
position = Vector2(0, -360)

[node name="Indicator1" parent="." instance=ExtResource("2_ngx3p")]

[node name="Indicator2" parent="." instance=ExtResource("2_ngx3p")]
position = Vector2(0, 360)

[node name="DangerBeep" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_86jkg")
volume_db = 6.0
autoplay = true

[connection signal="finished" from="DangerBeep" to="." method="_on_danger_beep_finished"]
